third time trying this commet. lets rock
- removed /occupyforclimate from baseurl
- replaced hero img
- added 2 pages, edited 2 pages

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ email: e@ma.il
 description: 'Occupy for Climate.
 
 '
-baseurl: '/occupyforclimate'
+baseurl: ''
 url: ''
 permalink: pretty
 markdown: kramdown
