Big changes! Style, new buttons, stuff
- update jekyll to 3.8.6
- style cleanup: deleted old css
- renamed some buttons
- added THE CRISIS button & page (no content yet)
- removed the logo from the background image
- made the header on pages fixed & added a donate button to it
- added a button to go to a random page

--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,14 @@ baseurl: ''
 url: ''
 permalink: pretty
 markdown: kramdown
-gems:
+plugins:
 - jekyll-feed
 - jekyll-seo-tag
 exclude:
 - Gemfile
 - Gemfile.lock
+
+# Random redirect settings
+random_redirect:
+  pages: true
+  documents: true
