Add COVID-19 Demands
/demands/en and /demands/fr

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Custom
+.jekyll-cache/
+
 # =========================
 # Operating System Files
 # =========================
