--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@ email: e@ma.il
 description: 'Youth for Climate Luxembourg
 
 '
-baseurl: ''
+# baseurl: ''
+baseurl: '/occupyforclimate/'
 url: ''
 permalink: pretty
 markdown: kramdown
